[project]
name = "doser"
version = "0.1.0"
description = "Application to keep track of drug use according to drug's list."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pytest>=8.4.2",
    "rich>=14.2.0",
]

[project.scripts]
doser = "doser.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doser"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
